--- a/scatter_plot.ipynb
+++ b/scatter_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,16 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f142607ab38>"
+       "<matplotlib.collections.PathCollection at 0x7f5eea2a2518>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -106,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f14261cb2b0>"
+       "<matplotlib.collections.PathCollection at 0x7f5eea1f1f28>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -138,16 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f14262f07b8>"
+       "<matplotlib.collections.PathCollection at 0x7f5eea1644a8>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -174,16 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f1425f76f98>"
+       "<matplotlib.collections.PathCollection at 0x7f5eea147cf8>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Stay tuned for more updates"
+   ]
   }
  ],
  "metadata": {
